--- a/Margadarshan_frontend/src/css-files/headerstyle.css
+++ b/Margadarshan_frontend/src/css-files/headerstyle.css
@@ -9,12 +9,14 @@
     right: 0;
     height: 90px;
     z-index: 100;
+    gap: 7vw;
 }
 
 .header-website-title {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
+    margin-right: 15px;
 }
 
 .header-logo-button {
@@ -22,14 +24,8 @@
     background-color: #152039;
     width: 55px;
     height: 60px;
-    margin-left: -90px;
-    margin-top: -80px;
-}
-
-@media screen and (max-width: 1400px) {
-    .header-website-title {
-        margin-top: 2px;
-    }
+    margin-left: 30px;
+    margin-top: -15px;
 }
 
 .header-logo-button:hover {
@@ -41,10 +37,10 @@
 }
 
 .header-logo {
-    width: 100px;
-    height: 100px;
-    margin-left: -10px;
-    margin-top: -5px;
+    width: 60px;
+    height: 60px;
+    margin-left: -20px;
+    margin-top: -2px;
 }
 
 .header-website-title-button {
@@ -52,10 +48,10 @@
     border: none;
     color: #FFE34F;
     background-color: transparent;
-    font-family: "Paytone One";
-    font-size: 26px;
-    margin-left: 50px;
-    margin-top: -35px;
+    font-family: "Paytone One", serif;
+    font-size: 28px;
+    margin-left: 12px;
+    padding-top: 10px;
 }
 
 .header-website-title-button:hover {
@@ -68,9 +64,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-left: 500px;
     margin-top: 15px;
-    margin-right: 40px;
+    margin-right: 15px;
     position: relative;
 }
 
@@ -78,7 +73,7 @@
     background-color: #152039;
     color: white;
     border: none;
-    font-family: "Nunito";
+    font-family: "Nunito", serif;
     font-weight: 600;
     font-size: 1.2vw;
 }
@@ -102,12 +97,12 @@
 }
 
 .header-drop-down-button {
-    font-family: "Nunito";
+    font-family: "Nunito", serif;
     background-color: black;
     color: white;
     border: none;
-    border-radius: 0px;
-    width: 145px;
+    border-radius: 0;
+    width: 160px;
     height: 40px;
     transition: background-color, color, 0.25s;
 }
@@ -122,13 +117,6 @@
 
 .header-header-button-uni:hover .header-drop-down-uni {
     opacity: 1;
-}
-
-@media only screen and (max-width: 1100px) {
-    .header-drop-down-uni {
-        right: 10px;
-        width: 100%;
-    }
 }
 
 .header-header-button-portfolio {
@@ -149,7 +137,7 @@
     opacity: 0;
 }
 
-.header-button-portfolio:hover .header-drop-down-portfolio {
+.header-header-button-portfolio:hover .header-drop-down-portfolio {
     opacity: 1;
     visibility: visible;
 }
@@ -158,7 +146,6 @@
     display: flex;
     flex: 1;
     flex-direction: row;
-    justify-content: end ;
     align-items: center;
     margin-right: 10px;
     margin-top: 3px;
@@ -169,12 +156,12 @@
     height: 55px;
     width: 55px;
     border-radius: 35px;
-    border-width: 3.5px;
+    border-width: 4px;
     border-color: white;
     border-style: solid;
-    margin-left: 40px;
     background-color: white;
     margin-top: -4px;
+    text-align: center;
 }
 
 .header-profile-button:hover {
@@ -184,13 +171,15 @@
 .header-profile {
     height: 35px;
     width: 35px;
-    margin-top: -1px;
+    margin-top: -3px;
+    margin-right: 5px;
+    margin-left: -13px;
+    vertical-align: middle;
 }
 
 .header-logout-button {
-    position: absolute;
     color: white;
-    font-family: 'Nunito';
+    font-family: 'Nunito', serif;
     font-weight: 800;
     background-color: black;
     border-radius: 10px;
@@ -198,10 +187,9 @@
     width: 70px;
     border-style: solid;
     opacity: 0;
-    margin-top: 120px;
-    margin-right: 20px;
     padding-left: 8px;
     padding-top: 2px;
+    margin-right: 15px;
     position: relative;
     transition: background-color, color 0.35s;
 }
@@ -214,9 +202,8 @@
     cursor: pointer;
     background-color: white;
     border-color: #1a1a1a;
-    border-width: 2.5px;
+    border-width: 3px;
     color: black;
-    padding-block-start: 3px;
     padding-left: 7px;
 }
 
@@ -226,7 +213,7 @@
     position: absolute;
     z-index: 1;
     top: 90px;
-    right: 0px;
+    right: 0;
     background-color: #152039;
     overflow-x: hidden;
     padding-top: 20px;
@@ -234,7 +221,7 @@
 }
 
 .header-sidenav a {
-    padding: 40px 30px 0px 32px;
+    padding: 40px 30px 0 32px;
     text-decoration: none;
     font-size: 25px;
     color: rgb(185, 186, 180);
@@ -255,8 +242,16 @@
 }
 
 @media screen and (max-width: 1040px) {
+    .header-content{
+        gap: 0;
+    }
+
     .header-header-button-container {
         display: none;
+    }
+
+    .header-website-title{
+        margin-right: 10vw;
     }
 
     .header-profile-container {
@@ -267,7 +262,6 @@
         align-items: center;
         margin-top: 15px;
         margin-right: 30px;
-        margin-left: 300px;
         position: relative;
     }
 
@@ -280,14 +274,14 @@
     .header-profile {
         height: 30px;
         width: 30px;
-        margin-top: -9px;
         margin-left: -15px;
+        margin-top: -10px;
     }
 
     .header-logout-button {
         position: absolute;
         color: white;
-        font-family: 'Nunito';
+        font-family: 'Nunito', serif;
         font-weight: 800;
         background-color: black;
         border-radius: 10px;
@@ -297,7 +291,7 @@
         opacity: 0;
 
         font-size: 12px;
-        margin-top: 0px;
+        margin-top: 0;
         margin-right: 40px;
         padding-left: 6px;
         padding-right: 7px;
@@ -312,7 +306,7 @@
     .header-logout-button:hover {
         cursor: pointer;
         background-color: white;
-        border-width: 2.5px;
+        border-width: 3px;
         color: black;
     }
 
@@ -320,7 +314,7 @@
         border: none;
         color: white;
         background-color: #152039;
-        font-family: "Paytone One";
+        font-family: "Paytone One", serif;
         font-size: 30px;
         margin-right: 10px;
         margin-top: 5px;
@@ -334,6 +328,87 @@
 
     .header-click {
         display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .header-content{
+        gap: 0;
+    }
+
+    .header-header-button-container {
+        display: none;
+    }
+
+    .header-website-title{
+        margin-right: 10vw;
+    }
+
+    .header-profile-container {
+        display: flex;
+        flex: 1;
+        flex-direction: row;
+        justify-content: end ;
+        align-items: center;
+        margin-top: 15px;
+        margin-right: 30px;
+        position: relative;
+    }
+
+    .header-profile-button {
+        height: 45px;
+        width: 45px;
+        margin-right: -20px;
+    }
+
+    .header-profile {
+        height: 30px;
+        width: 30px;
+        margin-left: -15px;
+        margin-top: -10px;
+    }
+
+    .header-logout-button {
+        position: absolute;
+        color: white;
+        font-family: 'Nunito', serif;
+        font-weight: 800;
+        background-color: black;
+        border-radius: 10px;
+        height: 30px;
+        width: 70px;
+        border-style: solid;
+        opacity: 0;
+
+        font-size: 12px;
+        margin-top: 0;
+        margin-right: 40px;
+        padding-left: 6px;
+        padding-right: 7px;
+
+        transition: background-color, color 0.35s;
+    }
+
+    .header-profile-container:hover .header-logout-button {
+        opacity: 1;
+    }
+
+    .header-logout-button:hover {
+        cursor: pointer;
+        background-color: white;
+        border-width: 3px;
+        color: black;
+    }
+
+    .header-click-button {
+        border: none;
+        color: white;
+        background-color: #152039;
+        font-family: "Paytone One", serif;
+        font-size: 30px;
+        margin-right: 10px;
+        margin-top: 5px;
+        padding-left: 15px;
     }
 }
 
