--- a/Margadarshan_frontend/src/css-files/ExamSection.css
+++ b/Margadarshan_frontend/src/css-files/ExamSection.css
@@ -1,11 +1,9 @@
 .tarara{
-    /* background-color: purple; */
-    background-color: aqua;
+    background-color:#152039;
     height: 200px;
     width: 100vw;
     display: flex;
-    /* margin-top: 160px; */
-    margin-top:90px;
+    margin-top:95px;
 
 }
 #exam{
@@ -18,13 +16,13 @@
     height:200px;
     width: 100px;
     flex-grow: 1;
-    background-color: aqua;
+    background-color:#152039;
     align-content: space-around;
 }
 #exam_text{
     color: #FFE34F;
     font-weight:900;
-    font-size:60px;
+    font-size:75px;
     line-height: 200px;
 }
 .left_content{
@@ -35,20 +33,20 @@
     display: flex;
     height:200px;
     width: 100px;
-    /* background-color:antiquewhite; */
+    background-color: #152039;
     flex-grow:2;
     align-content:space-evenly;
 
 }
-img{
+.exam-picture{
     height: 170px;
-    width: 160px;
+    width: 215px;
     margin-left: 50px;
 }
 .exam_types{
     line-height:200px;
     width:300px;
-    background-color:blue;
+    background-color:#152039;
     text-align: center;
 }
 .exam_types button{
@@ -56,7 +54,7 @@ img{
     font-size:40px;
     color: #FFE34F;
     border: none;
-    background-color:blue;
+    background-color: #152039;
 
 }
 .exam_types button:hover{
